<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="nxp">NXP</string>
    <string name="mos_switch">MOS</string>
    <string name="mos_test_mode">Mos Test Mode</string>
    <string name="not_mos_test_mode">Not Mos Test Mode</string>
    <string name="meid_switch">Store Meid At Sim Init</string>
    <string name="dm_switch">ctcc dm switch</string>
    <string name="sip_force_mt_session_timer">sip force mt session timer</string>
    <string name="no_space_internal">no enough apace in internal storage</string>
    <string name="sim_invalid">SIM is invalid</string>
    <string name="apk_not_exist">this apk does not exist</string>
    <string name="not_support_visitor_or_user_mode">visitor or user mode does not support this feature</string>
    <string name="sms_over_ip_switch">SMS OVER IP</string>
    <string name="imsswitch">IMS APN</string>
    <string name="volte_switch">Volte Switch</string>
    <string name="dualVoLTE_switch">DualVoLTE Switch</string>
    <string name="volte_switch_waring">This action will restart the phone, whether or not to continue?</string>
    <string name="qrm_switch_waring">This action will restart the phone, whether or not to continue?</string>
    <string name="choose_to_reboot">The phone will restart after set success, whether or not to continue?</string>
    <string name="volteswitch">Volte Switch</string>
    <string name="traffic_class">traffic class:</string>
    <string name="Default_value">Default value</string>
    <string name="Self_defining_value">Self definit value</string>
    <string name="app_name">EngineerMode</string>
    <string name="tab_telephony">Telephony</string>
    <string name="tab_debug">Debug&amp;Log</string>
    <string name="tab_connectivity">Connectivity</string>
    <string name="tab_hardwaretest">HardWare</string>
    <string name="tab_location">Location</string>
    <string name="systeminfo">System Info</string>
    <string name="powerdissipation">Power Dissipation Setting</string>
    <string name="verinfo">Version Info</string>
    <string name="memory_info_and_usage">Memory Info And Usage</string>
    <string name="usage_top5_process">Usage Top 5 Process</string>
    <string name="cpu_info_and_usage">Cpu Info And Usage</string>
    <string name="cpu_usage">Cpu Usage</string>
    <string name="other_system_info_and_detail">Other System Info And Detail</string>
    <string name="thread_info">Thread Info</string>
    <string name="sprd_power_log">Power Log</string>
    <string name="sprd_power_hint_log">Power Hint Log</string>
    <string name="sprd_power_guru_log">Power Guru Log</string>
    <string name="sprd_doze_log">Doze Log</string>
    <string name="sprd_display_log">Display Log</string>
    <string name="sprd_battery_log">Battery Log</string>
    <string name="sprd_wakelock_log">WakeLock Log</string>
    <string name="sprd_power_controller_log">PowerController Log</string>
    <string name="sprd_battery_saver_log">BatterySaver Log</string>
    <string name="sprd_alarm_log">Alarm Log</string>
    <string name="sprd_power_controller_switch">PWCTL Enabled</string>
    <string name="sprd_power_controller_gps_switch">PWCTL GPS Enabled</string>
    <string name="sprd_power_controller_network_switch">PWCTL Network Enabled</string>
    <string name="sprd_power_controller_bg_clean_switch">PWCTL BGClean Enabled</string>
    <string name="sprd_power_controller_wakelock_switch">PWCTL Wakelock Enabled</string>
    <string name="sprd_power_controller_only_saver_switch">PWCTL Only In Saver Enabled</string>
    <string name="sprd_power_controller_gps_only_saver_switch">PWCTL GPS Only In Saver Enabled</string>
    <string name="sprd_log_prompt">Prompt:All changes to this page will take effect after rebooting the device.</string>
    <string name="battery_log">Battery Log</string>
    <string name="build_number">Build Number</string>
    <string name="flash_block_info">Flash Block Info</string>
    <string name="cftresult">CFT Result</string>
    <string name="logsettings">Log Settings</string>
    <string name="it3">IT3</string>
    <string name="iot">IOT Test</string>
    <string name="pclog">PC Log</string>
    <string name="slogui">Ylog UI</string>
    <string name="label_slogui">YlogUI</string>
    <string name="rdo_general_on">On</string>
    <string name="rdo_general_off">Off</string>
    <string name="rdo_general_lowpower">Silent</string>
    <string name="chk_general_switch">General switch</string>
    <string name="chk_general_android">Record Android log</string>
    <string name="chk_general_modem">Record modem log</string>
    <string name="chk_general_cp0">Record WCDMA Modem Log</string>
    <string name="chk_general_cp1">Record TD-SCDMA Log</string>
    <string name="chk_general_cp2">Record WCN Modem Log</string>
    <string name="chk_general_cp3">Record CP3 Log</string>
    <string name="txv_general_storagelocation">Log path</string>
    <string name="rdo_general_sdcard">SDCard</string>
    <string name="rdo_general_nand">Data directory</string>
    <string name="btn_general_clearlog">Clear logs in Log path</string>
    <string name="btn_general_dump">Dump log in SD</string>
    <string name="chk_general_snapsvc">Start screenshot service</string>
    <string name="chk_general_alwaysrun">Always showing the notification in status bar</string>
    <string name="chk_general_autoclear">HW watchdog</string>
    <string name="alert_request_dump_title">Request dumping log in SDCard</string>
    <string name="alert_request_dump_prompt">Need to dump logs in T-Card? Please ensure that you have chosen the SDCard in logpath.</string>
    <string name="toast_dump_filename_error">Please check your input, you can input latin-characters and numbers only.</string>
    <string name="chk_android_switch">Record Android Log</string>
    <string name="txv_android_branch">Subswitch</string>
    <string name="chk_android_kernel">Record kernel log</string>
    <string name="chk_android_system">Record system log</string>
    <string name="chk_android_main">Record main log</string>
    <string name="chk_android_event">Record event log</string>
    <string name="chk_android_radio">Record radio log</string>
    <string name="chk_modem_switch">Record modem log</string>
    <string name="volte_evs_primary">EVS Primary Mode</string>
    <string name="volte_voice_code_type">Audio Codec</string>
    <string name="max_bandwidth">Maximum Bandwidth</string>
    <string name="max_rate">Maximum Bitrate</string>
    <string name="operator_cmcc">CMCC</string>
    <string name="operator_cucc">CUCC</string>
    <string name="operator_orange">ORANGE</string>
    <string name="operator_telstra">TELSTRA</string>
    <string name="operator_vodafone">VODAFONE</string>
    <string name="operator_telcel">TELCEL</string>
    <string name="operator_movistar">MOVISTAR</string>
    <string name="operator_reliance">RELIANCE</string>
    <string name="operator_dt">DT</string>
    <string name="operator_mtn">MTN</string>
    <string name="operator_claro">CLARO</string>
    <string name="operator_docomo">DOCOMO</string>
    <string name="operator_ukee">UK_EE</string>
    <string name="operator_megafon">Megafon</string>
    <string name="operator_tmobile">T-Mobile</string>
    <string name="operator_true">True</string>
    <string name="operator_ytlc">YTLC</string>
    <string name="operator_att">AT&#038;T</string>
    <string name="operator_oysters">Oysters</string>
    <string name="operator_beeline">Beeline</string>
    <string name="operator_tim">TIM</string>
    <string name="operator_ais">AIS</string>
    <string name="operator_smarfren">Smarfren</string>
    <string name="operator_dtag">DTAG</string>
    <string name="operator_etisalat">Etisalat</string>
    <string name="operator_mts">MTS</string>
    <string name="operator_prestigio">Prestigio</string>
    <string name="operator_seatel">Seatel</string>
    <string name="operator_unitel">UNITEL</string>
    <string name="operator_altice">Altice</string>
    <string name="operator_peru_claro">Peru_Claro</string>
    <string name="operator_dialog">Dialog</string>
    <string name="operator_dtac">DTAC</string>
    <string name="operator_inwi">INWI</string>
    <string name="operator_irancell">Irancell</string>
    <string name="operator_mascom">Mascom</string>
    <string name="operator_ntel">Ntel</string>
    <string name="operator_smile">Smile</string>
    <string name="operator_veon">Veon</string>
    <string name="operator_vodacom">Vodacom</string>
    <string name="operator_fastlink">Fastlink</string>
    <string name="operator_zone">Zone</string>
    <string name="operator_ctcc">CTCC</string>
    <string name="operator_telefonica">Telefonica</string>
    <string name="ue_cap_3g">3G</string>
    <string name="ue_cap_2g">2G</string>
    <string name="ue_cap_wcdma">WCDMA</string>
    <string name="ua_name">UA Name</string>
    <string name="sprd_volte">SPRD VoLTE</string>
    <string name="video">Video</string>
    <string name="video_call_enable">Video Call Enable</string>
    <string name="video_codec">Video Codec</string>
    <string name="video_conference_enable">Video Conference Enable</string>
    <string name="sms">SMS</string>
    <string name="sms_pdu_format">SMS PDU Format</string>
    <string name="dev_flag_1">Dev Flag 1</string>
    <string name="dev_flag_2">Dev Flag 2</string>
    <string name="dev_flag_3">Dev Flag 3</string>
    <string name="sprd_power_hal_log">PowerHAL Log</string>
    <string name="release_white_list">Released White List</string>
    <string name="test_plmn_1">Test PLMN 1</string>
    <string name="test_plmn_2">Test PLMN 2</string>
    <string name="ai_ip">AI IP</string>
    <string name="ai_ip_switch">AI IP Switch</string>
    <string name="ai_ip_function">AI IP Function</string>
    <string name="nn_log">NN log</string>
    <string name="model_log">model</string>
    <string name="compilation_log">compilation</string>
    <string name="execution_log">execution</string>
    <string name="cpuexec_log">cpuexec</string>
    <string name="manager_log">manager</string>
    <string name="driver_log">driver</string>
    <string name="ue_cap_cdma">CDMA</string>
    <string name="ue_cap_cdma_sr1_supported">Sr1supported</string>
    <string name="ue_cap_cdma_sr3_supported">Sr3supported</string>
    <string name="ue_cap_cdma_rcclass1_supported">Rcclass1supported</string>
    <string name="ue_cap_cdma_rcclass2_supported">Rcclass2supported</string>
    <string name="ue_cap_cdma_rcclass3_supported">Rcclass3supported</string>
    <string name="ue_cap_cdma_qpch_supported">Rpchsupported</string>
    <string name="ue_cap_cdma_band_class">BandClass</string>
    <string name="ue_cap_cdma_band_sub_class">BandSubClass</string>
    <string name="ue_cap_cdma_rate1m8_supported">Rate1M8Supported</string>
    <string name="phone_information">Phone Information</string>
    <string name="terminator_version">Terminator Version</string>
    <string name="software_version">Software Version</string>
    <string name="hardware_version">Hardware Version</string>
    <string name="prl_version">PRL Version</string>
    <string name="system_version">Operation System Version</string>
    <string name="storage_volume">Storage Volume</string>
    <string name="memory_volume">Memory Volume</string>
    <string name="sid_number">SID</string>
    <string name="nid_number">NID</string>
    <string name="meid_number">MEID</string>
    <string name="esn_number">ESN</string>
    <string name="baseid_number">BaseID</string>
    <string name="imei_number1">IMEI1</string>
    <string name="imei_number2">IMEI2</string>
    <string name="cellid_sim_slot1">CELLID(sim slot1)</string>
    <string name="cellid_sim_slot2">CELLID(sim slot2)</string>
    <string name="cdma_imsi1">CDMAIMSI1</string>
    <string name="cdma_imsi2">CDMAIMSI2</string>
    <string name="icc_id1">ICCID1</string>
    <string name="icc_id2">ICCID2</string>
</resources>