<?xml version="1.0" encoding="UTF-8"?>
<!-- BUG547014 zhijie.yang 2016/05/09 SPRD:add mipi log function -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/ai_ip" >
        <ListPreference android:key="ai_ip_key"
            android:dialogTitle="@string/ai_ip_switch"
            android:entries="@array/ai_ip_str"
            android:entryValues="@array/ai_ip_value"
            android:title="@string/ai_ip_function" >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="nn_log"
        android:title="@string/nn_log" >
        <com.sprd.engineermode.EMSwitchPreference
            android:key="model_log_key"
            android:title="@string/model_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:key="compilation_log_key"
            android:title="@string/compilation_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:key="execution_log_key"
            android:title="@string/execution_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:key="cpuexec_log_key"
            android:title="@string/cpuexec_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:key="manager_log_key"
            android:title="@string/manager_log" >
        </com.sprd.engineermode.EMSwitchPreference>
        <com.sprd.engineermode.EMSwitchPreference
            android:key="driver_log_key"
            android:title="@string/driver_log" >
        </com.sprd.engineermode.EMSwitchPreference>
    </PreferenceCategory>

</PreferenceScreen>